added a post method for a study

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,8 @@
 spring.application.name=ferilskra
-spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
+server.port=8080
+spring.datasource.url=jdbc:postgresql://dpg-ctbm6phu0jms73co61n0-a.frankfurt-postgres.render.com:5432/ferilskra
+spring.datasource.username=sandraliv
+spring.datasource.password=gtruvlqK2QVfuTAb3Y2dXDNlTeaQjvNJ
+# This will drop the existing schema and create new tables at application startup
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
